# src/swagger/swagger.yaml
@@ -425,7 +425,7 @@ paths:
               schema:
                 type: object
                 properties:
-                  memoList:
+                  memoList: 
                     type: array
                     items:
                       $ref: "#/components/schemas/MemoItem"
@@ -652,10 +652,7 @@ components:
     MemoItem:
       type: object
       properties:
-        userId: 
-          type: string
-          description: "ユーザーID"
-        _id:
+        id:
           type: string
           description: "メモID"
         title:
@@ -664,12 +661,3 @@ components:
         content:
           type: string
           description: "メモ内容"
-        createdAt:
-          type: string
-          format: date-time
-          description: "作成日時"
-        updatedAt:
-          type: string
-          format: date-time
-          description: "更新日時"
-          
